# convertSvgsToPng

./: README.md  main.py  pyproject.toml
